# wgsl-shader-generator

./: .gitignore  Cargo.toml  README.md  shell.nix  test_script.sh
DesignDocs/: graph.drawio  node_structure.drawio
benches/: my_benchmark.rs
src/: graph.rs  lib.rs  main.rs
