[package]
name = "wgsl_shader_generator"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking", "bevy_picking", "file_watcher", "embedded_watcher"
] }
criterion = {version = "0.8.2", features = ["html_reports"]}

[dev-dependencies]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"


[[bench]]
name = "my_benchmark"
harness = false
